examples/test/testpolicy14279.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14279
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key27: value0
      key29: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value35
          key36: value20
      podSelector:
        matchLabels:
          key35: value3
          key18: value17
